tests/compile-fail/integration__integration__image_sources__anti_scratch_bad_in_func.snap
---
source: tests/integration/image_sources.rs
expression: stderr
---
error: scratch registers are disabled in this script
   ┌─ <input>:35:27
   │
35 │         F3 = (F0 + 1.0) * ((F0 + 2.0) * (F0 + 3.0));
   │                           ^^^^^^^^^^^^^^^^^^^^^^^^^ this fancy expression requires a scratch register
36 │         copyVars();
   │         ^^^^^^^^^^^ this disables scratch registers


